--- a/reduca-web/firebase.json
+++ b/reduca-web/firebase.json
@@ -3,6 +3,7 @@
     "rules": "database.rules.json"
   },
   "hosting": {
+    "site": "euvsvirus-d0165",
     "public": "build",
     "ignore": [
       "firebase.json",
