--- a/reduca-web/package.json
+++ b/reduca-web/package.json
@@ -9,10 +9,12 @@
     "firebase": "^7.14.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "deploy": "firebase deploy",
+    "deploy": "react-scripts build && firebase deploy",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
