--- a/reduca-web/package.json
+++ b/reduca-web/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.14.2",
     "react": "^16.13.1",
+    "react-calendar": "^3.0.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
